--- a/src/forms/partials/head.html
+++ b/src/forms/partials/head.html
@@ -1,11 +1,14 @@
-<link rel="stylesheet" type="text/css" href="/portal/resources/style-guide/css/fluig-style-guide.min.css">
+<link rel="stylesheet" type="text/css" href="/style-guide/css/fluig-style-guide-flat.min.css">
 <link rel="stylesheet" type="text/css" href="/seed_lib/css/main.css" />
+<link rel="stylesheet" type="text/css" href="../../wcm/widget/seed_lib/css/main.css" />
 <script type="text/javascript" src="/portal/resources/js/jquery/jquery.js"></script>
 <script type="text/javascript" src="/portal/resources/js/mustache/mustache-min.js"></script> 
-<script type="text/javascript" src="/portal/resources/style-guide/js/fluig-style-guide.min.js"></script>
+<script type="text/javascript" src="/style-guide/js/fluig-style-guide.min.js"></script>
 <script type="text/javascript" src="/webdesk/vcXMLRPC.js"></script>
 <script type="text/javascript" src="/seed_lib/js/vendor.min.js"></script>
 <script type="text/javascript" src="/seed_lib/js/script.min.js"></script>
+<script type="text/javascript" src="../../wcm/widget/seed_lib/js/vendor.min.js"></script>
+<script type="text/javascript" src="../../wcm/widget/seed_lib/js/script.min.js"></script>
 <script type="text/javascript" src="custom.min.js"></script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
